<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E0E0E0"
    android:gravity="center"
    android:padding="20dp">

    <!-- Emergency Number Input 1 (Mandatory) -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emergencyInput1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/emergency_number_1_mandatory"
        android:padding="15dp"
        android:singleLine="true"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <!-- Emergency Number Input 2 (Mandatory) -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emergencyInput2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/emergency_number_2_mandatory"
        android:padding="15dp"
        android:singleLine="true"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <!-- Emergency Number Input 3 (Mandatory) -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emergencyInput3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/emergency_number_3_mandatory"
        android:padding="15dp"
        android:singleLine="true"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <!-- Emergency Number Input 4 (Optional) -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emergencyInput4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/emergency_number_4_optional"
        android:padding="15dp"
        android:singleLine="true"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <!-- Emergency Number Input 5 (Optional) -->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emergencyInput5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/emergency_number_5_optional"
        android:padding="15dp"
        android:singleLine="true"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <!-- Continue Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cntBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:text="Continue"
        app:backgroundTint="#009AFF"
        app:layout_constraintTop_toBottomOf="@id/emergencyInput5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="260dp" />

</LinearLayout>