<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="#E4E4E4"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/introtext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/nothing"
            android:text="@string/safeher"
            android:textColor="@color/black"
            android:textSize="50sp"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/edit_emergency_numbers_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/dark_white"
            android:src="@drawable/ic_settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/heavyemergencybutton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nothing"
            android:textColor="@color/black"
            android:text="@string/nearby_friends"/>

        <ImageButton
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/mappp"
            app:layout_constraintBottom_toTopOf="@id/heavyemergencybutton" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/heavyemergencybutton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/critical_alert"
        app:backgroundTint="#C10000"
        app:flow_horizontalAlign="center"
        app:elevation="0dp"
        style="@style/NoShadowButton"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@+id/emergencybtn"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/emergencybtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:text="@string/quick_alert"
        app:backgroundTint="#FFFFFF"
        android:textColor="@color/black"
        app:elevation="0dp"
        app:flow_horizontalAlign="center"
        style="@style/NoShadowButton"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>